# opengl-renderer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
assets/shaders/: basic.frag  basic.vert  lit.frag  lit.vert
src/: Sylph.h  main copy.cpp  main.cpp
src/engine/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h  Window.cpp  Window.h
src/renderer/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  RenderData.h  RenderTypes.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/scene/: INode.h  Node.h  SceneTree.cpp  SceneTree.h
src/scene/nodes/: LightNode.cpp  LightNode.h  MeshNode.cpp  MeshNode.h
